# CatamaranDependencies

./: .gitignore  README.md  boot_nuc.sh  boot_raspberry.sh  catamaran_dependencies.repos  entorno_docker.sh  requirements.txt
catamaran_camera_republisher/: CMakeLists.txt  README.md  package.xml
catamaran_camera_republisher/include/catamaran_camera_republisher/: adaptive_republisher.hpp
catamaran_camera_republisher/src/: adaptive_camera_republisher.cpp  adaptive_lidar_republisher.cpp
catamaran_camera_streams/: CMakeLists.txt  README.md  package.xml
catamaran_camera_streams/launch/: camera_streams.launch.py
catamaran_camera_streams/src/: camera_compressed_publisher.cpp
catamaran_camera_streams/udev/: 99-catamaran-camera.rules.example
catamaran_congestion_control/: CMakeLists.txt  README.md  package.xml
catamaran_congestion_control/config/: catamaran_cameras.yaml  catamaran_lidar.yaml
catamaran_congestion_control/include/catamaran_congestion_control/: adaptive_republisher.hpp
catamaran_congestion_control/src/: adaptive_camera_republisher.cpp  adaptive_lidar_republisher.cpp
catamaran_core/: package.xml  setup.cfg  setup.py
catamaran_core/launch/: nuc.launch.py  nuc_Puerto18Mayo.launch.py  nuc_cam.launch.py  nuc_debug.launch.py  nuc_gps.launch.py  nuc_more_cams.launch.py  nuc_motor.launch.py  nuc_only_cams.launch.py  raspberry.launch.py  raspberry_debug.launch.py  raspbery_debug.launch.py
catamaran_description/: CMakeLists.txt  catamaran.rviz  package.xml
catamaran_description/launch/: robot_description.launch.py
catamaran_description/urdf/: catamaran.xacro
catamaran_sensors/: package.xml  setup.cfg  setup.py
catamaran_sensors/catamaran_sensors/: gps_republisher.py  mavlink_bridge.py  navigator_imu_publisher.py  tf_gps_publisher.py
catamaran_sensors/config/: ublox_gps.yaml
catamaran_sensors/launch/: gps.launch.py  gps_imu_tf.launch.py  mavlink_tf.launch.py
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/: set_velocity.h  set_velocity.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/msg/detail/: set_position__functions.c  set_position__functions.h  set_position__rosidl_typesupport_fastrtps_c.h  set_position__struct.h  set_position__struct.hpp  set_position__traits.hpp  set_position__type_support.cpp  set_velocity__builder.hpp  set_velocity__functions.c  set_velocity__functions.h  set_velocity__rosidl_typesupport_fastrtps_c.h  set_velocity__rosidl_typesupport_introspection_c.h  set_velocity__struct.hpp  set_velocity__type_support.h  set_velocity__type_support.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: get_velocity.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: get_position__builder.hpp  get_position__functions.c  get_position__struct.h  get_position__traits.hpp  get_position__type_support.c  get_position__type_support.cpp  get_velocity__functions.c  get_velocity__functions.h  get_velocity__rosidl_typesupport_introspection_cpp.hpp  get_velocity__struct.h  get_velocity__traits.hpp  get_velocity__type_support.cpp
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/: _custom_interfaces_s.ep.rosidl_typesupport_c.c  _custom_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c  _custom_interfaces_s.ep.rosidl_typesupport_introspection_c.c
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
install/custom_interfaces/local/lib/python3.10/dist-packages/custom_interfaces/msg/: _set_position.py
install/custom_interfaces/share/custom_interfaces/: package.sh
install/custom_interfaces/share/custom_interfaces/cmake/: custom_interfaces__rosidl_typesupport_cExport.cmake  custom_interfaces__rosidl_typesupport_cppExport.cmake  export_custom_interfaces__rosidl_generator_cExport.cmake  export_custom_interfaces__rosidl_generator_cppExport.cmake  export_custom_interfaces__rosidl_generator_pyExport.cmake
install/custom_interfaces/share/custom_interfaces/msg/: SetPosition.idl  SetVelocity.idl
install/dynamixel_sdk/share/dynamixel_sdk/: package.sh
install/motor_bringup/lib/motor_bringup/: cmdvel_motor_controller  rudder_angle_controller  rudder_angle_controller_abs  rudder_angle_publisher
install/motor_bringup/share/ament_index/resource_index/parent_prefix_path/: motor_bringup
install/motor_bringup/share/motor_bringup/: package.sh
install/motor_bringup/share/motor_bringup/cmake/: motor_bringupConfig.cmake
install/zr30camera/lib/zr30camera/: cam_teleop  controller  stream
install/zr30camera/share/zr30camera/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
motor_bringup/: CMakeLists.txt  README.md  package.xml
motor_bringup/include/: rudder_angle_controller.hpp
motor_bringup/launch/: cable_distance_controller.launch.py  catamaran_launch.py  cmdvel_mavlink_controller.launch.py  lars_height_controller.launch.py  motor_bringup_launch.py
motor_bringup/src/: cable_distance_controller.cpp  cmdvel_mavlink_controller.cpp  cmdvel_motor_controller.cpp  lars_height_controller.cpp  rudder_angle_contoller_abs.cpp  rudder_angle_controller.cpp  rudder_angle_controller_abs.cpp  rudder_angle_controller_backup.cpp  rudder_angle_publisher.cpp
sbs_image_merger/: package.xml  setup.cfg  setup.py
sbs_image_merger/sbs_image_merger/: sbs_node.py
siyi-camera-controller/: README.md
siyi-camera-controller/zr30camera/siyi_sdk/tests/: test_record_video.py
siyi_camera_controller/: README.md  setup.py
siyi_camera_controller/launch/: zr30camera.launch.py
siyi_camera_controller/zr30camera/: camera_controller.py  camera_stream.py
siyi_camera_controller/zr30camera/siyi_sdk/: __init__.py
src/: SurroundViewRealTime  unitree_lidar_ros2
src/surround_view_wrapper/: CMakeLists.txt  package.xml
src/surround_view_wrapper/launch/: surround_view.launch.py
usb_cam/: CMakeLists.txt
usb_cam/src/: usb_cam_node.cpp
(+1 files in other folders)
