<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catamaran_sensors</name>
  <version>0.0.0</version>
  <description>Package for Catamaran sensors configuration and launch files</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pymavlink</exec_depend>
  <!-- <exec_depend>tf_transformations</exec_depend> -->

  <exec_depend>ublox_dgnss_node</exec_depend>
  <exec_depend>ntrip_client</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>