<?xml version="1.0"?>
<package format="3">
  <name>surround_view_wrapper</name>
  <version>0.1.0</version>
  <description>Wrapper package to expose SurroundViewRealTime binary as a ROS2 launch</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
